--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "stream-spigot": "^3.0.5",
     "timestream-aggregates": "^0.1.7",
     "validator": "^3.39.0",
+    "watchmen-ping-head-ssl": "^1.0.3",
     "watchmen-ping-http-contains": "^0.0.2",
     "watchmen-ping-http-head": "^0.2.0",
     "watchmen-plugin-aws-ses": "0.0.1",
